<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_to_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_add_to_favorites"
        android:iconifiedByDefault="false"
        android:title="@string/menu_favorites"
        android:visible="true"
        app:showAsAction="always" />
</menu>