...
            android:id="@+id/swipe_refresh_list_teams"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/spn_last_fixtures">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_list_teams"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="56dp" />

            <ProgressBar
                android:id="@+id/progressBarTeams"
...
